tests/src/errors/recognizer_not_defined/recognizer_not_defined.rustemo
A: B+;

terminals
B:;   // recognizer must be defined for default lexer but not for custom lexer.
